# OCL

./: .gitignore  CMakeLists.txt  LANGUAGE_REFERENCE.md  Makefile  README.md  main.ocl  ocl
Testfiles/: showcase.ocl  showcase_core_section.ocl  showcase_measure_target.ocl  showcase_stdlib_section.ocl  showcase_support.ocl  showcase_terminal_section.ocl  showcase_v1_core.ocl  showcase_v2_stdlib.ocl  showcase_v3_terminal.ocl  showcase_v4_interactive.ocl  showcase_v5_exit.ocl
docs/: INSTALL.md  NEXT_RELEASE_PLAN.md
docs/reference/: LANGUAGE_REFERENCE.md
include/: ast.h  bytecode.h  codegen.h  common.h  ctype.h  elf_emitter.h  errno.h  errors.h  inttypes.h  lexer.h  limits.h  math.h  ocl_stdlib.h  parser.h  runtime.h  stdio.h  stdlib.h  string.h  strings.h  time.h  type_checker.h  unistd.h  vm.h
ocl files/: CoreSX.sxh  main.ocl  showcase.ocl  test.ocl  test_arithmetic.ocl  test_arithmetic2.ocl  test_comment.ocl  test_compare.ocl  test_comprehensive.ocl  test_for.ocl  test_for_simple.ocl  test_func.ocl  test_func_call_only.ocl  test_func_debug.ocl  test_func_no_params.ocl  test_func_return.ocl  test_if.ocl  test_main.ocl  test_main_simple.ocl  test_main_simple2.ocl  test_multiply.ocl  test_oneline.ocl  test_phase2.ocl  test_print.ocl  test_print_simple.ocl  test_printf.ocl  test_printf_vars.ocl  test_simple_nocomment.ocl  test_subtract.ocl  test_variable.ocl  test_vars.ocl  test_while.ocl
src/: common.c
src/frontend/: elf_emitter.c  errors.c  main.c
src/interpreter/: ast.c  codegen.c  lexer.c  parser.c  type_checker.c
src/stdlib/: stdlib.c
src/test/: CoreSX.sxh  main.ocl
src/vm/: bytecode.c  runtime.c  vm.c  vm.rs  vm_legacy.c
stdlib_headers/: Math.ocl  terminal.ocl
test/: test_lexer.c  test_parser.c  test_type_checker.c  test_vm.c
